--- a/app/views/items/index.html.erb
+++ b/app/views/items/index.html.erb
@@ -132,11 +132,13 @@
         <%= link_to item_path(item) do %>
         <div class='item-img-content'>
           <%= image_tag item.image, class: "item-img" %>
-          <%# 商品購入機能実装後に実装するため、現在はコメントアウトする %>
-          <%# <div class='sold-out'>
+
+        <% unless Order.where(item_id: item.id).length == 0 %>
+          <div class='sold-out'>
             <span>Sold Out!!</span>
-          </div> %>
-          <%# //商品が売れていればsold outを表示しましょう %>
+          </div>
+        <% end %>
+
         </div>
         <div class='item-info'>
           <h3 class='item-name'>
